The list of supported versions has been expanded. Adding datapacks to a folder no longer automatically adds them to the game.