@@ -7,13 +7,15 @@ import org.apache.commons.io.FileUtils;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class SimpleDatapacks {
 
     public static final String modId = /*$ mod_id {*/"simple_datapacks"/*$}*/;
-    /*? fabric*/ public static final String clothConfigId = "cloth-config";
-    /*? forge || neoforge*/ /*public static final String clothConfigId = "cloth_config";*/
+    /*? (fabric && >=1.18) || (forge && <1.17)*/ public static final String clothConfigId = "cloth-config";
+    /*? (forge && >=1.17) || neoforge*/ /*public static final String clothConfigId = "cloth_config";*/
+    /*? fabric && <1.18*/ /*public static final String clothConfigId = "cloth-config2";*/
 
     public static Path minecraftFolder;
 
@@ -33,7 +35,7 @@ public class SimpleDatapacks {
         rawDatapacks.forEach(s -> datapacks.add(s.substring(5)));
 
         String[] copiedDatapacks = dest.toFile().list();
-        if (copiedDatapacks != null) datapacks.removeAll(List.of(copiedDatapacks));
+        if (copiedDatapacks != null) datapacks.removeAll(Arrays.asList(copiedDatapacks));
 
         try {
             for (String str : datapacks) {
