@@ -8,6 +8,7 @@ import me.shedaniel.autoconfig.annotation.ConfigEntry;
 import me.shedaniel.autoconfig.serializer.GsonConfigSerializer;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Config(name = SimpleDatapacks.modId)
@@ -19,7 +20,7 @@ public class Configs implements ConfigData {
     @ConfigEntry.Gui.Tooltip
     public boolean showFeatures = true;
 
-    public List<String> datapacksPaths = new ArrayList<>(List.of("datapacks", System.getProperty("user.home") + "\\Downloads"));
+    public List<String> datapacksPaths = new ArrayList<>(Arrays.asList("datapacks", System.getProperty("user.home") + "\\Downloads"));
 
     public static Configs getInstance() {
         return AutoConfig.getConfigHolder(Configs.class).getConfig();
